# Snake

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.h  render.c  render.h
Scripts/: build.sh
scripts/: build.bash  build.sh  run.bash  run.sh
src/: draw.c  draw.h  game.c  game.h  highscore.c  highscore.h  input.c  input.h  logic.c  logic.h  main.c  main.h  player.c  player.h  render.c  render.h  snake.c  snake.h  vector.c  vector.h  window.c  window.h
src/Engine/: draw.c  draw.h  game.c  game.h  input.c  input.h  pallete.c  pallete.h  vector.c  vector.h  window.c  window.h
